--- a/.gitignore
+++ b/.gitignore
@@ -1,69 +1,1 @@
-# Node.js
-node_modules/
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-
-# Environment Variables
-.env
-
-# Logs
-logs/
-*.log
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-logfile
-
-# Dependency directories
-node_modules/
-
-# TypeScript
-*.tsbuildinfo
-
-# Build Directory
-dist/
-
-# Optional npm cache directory
-.npm
-
-# Optional eslint cache
-.eslintcache
-
-# IDE specific
-.idea/
-.vscode/
-*.sublime-project
-*.sublime-workspace
-
-# MacOS specific
-.DS_Store
-
-# TypeScript v1 declaration files
-typings/
-
-# Optional eslint cache
-.eslintcache
-
-# Coveralls
-.coverage
-
-# Optional stylelint cache
-.stylelintcache
-
-# Optional REPL history
-.node_repl_history
-
-# IntelliJ IDEA
-.idea/
-
-# Other
-*.swp
-*.tmp
-*.bak
-*.pid
-*.seed
-*.pid.lock
-
-# Coverage directory used by tools like istanbul
-coverage/
+*/node_modules
