--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "auth_service",
+  "name": "node_base_template",
   "version": "1.0.0",
   "main": "main.ts",
   "scripts": {
@@ -12,14 +12,12 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "@types/amqplib": "^0.10.5",
     "@types/bcryptjs": "^2.4.6",
     "@types/express": "^5.0.0",
     "@types/jsonwebtoken": "^9.0.7",
     "@types/swagger-jsdoc": "^6.0.4",
     "@types/swagger-ui-express": "^4.1.7",
     "@types/validator": "^13.12.2",
-    "amqplib": "^0.10.4",
     "bcryptjs": "^2.4.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
