--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "1.0.0",
   "main": "main.ts",
   "scripts": {
-    "dev": "cross-env NODE_ENV=development nodemon src/main.ts",
+    "dev": "cross-env NODE_ENV=development nodemon src/server.ts",
     "build": "rm -rf build/ && tsc -p .",
-    "start": "cross-env NODE_ENV=production nodemon build/main.js"
+    "start": "cross-env NODE_ENV=production nodemon build/server.js"
   },
   "keywords": [],
   "author": "",
