--- a/tsconfig.json
+++ b/tsconfig.json
@@ -44,6 +44,9 @@
       ],
       "@auth/*": [
         "modules/auth/*"
+      ],
+      "@common/*": [
+        "common/*"
       ]
     },
     /* Specify a set of entries that re-map imports to additional lookup locations. */
