--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "node_base_template",
   "version": "1.0.0",
-  "main": "main.ts",
+  "main": "index.ts",
   "scripts": {
     "dev": "cross-env NODE_ENV=development nodemon -r tsconfig-paths/register src/index.ts",
     "build": "rm -rf build/ && tsc -p .",
